--- a/source/assets/stylesheets/modules/_nav.scss
+++ b/source/assets/stylesheets/modules/_nav.scss
@@ -17,10 +17,6 @@ nav {
   }
 
   ul a {
-    &:before {
-      background: $clr_accent;
-    }
-
     &:hover, &:focus, &:active {
       color: $clr_white;
     }
